--- a/env.example
+++ b/env.example
@@ -1,10 +1,53 @@
 # Configuração do Chatbot Político
 # Copie este arquivo para .env e preencha com suas credenciais
 
+# ==============================================================================
+# GOOGLE CLOUD CONFIGURATION
+# ==============================================================================
+# Para produção no Google Cloud, configure as variáveis através do:
+# 1. Cloud Run: Console Web ou gcloud CLI (ver cloud-run-config.md)
+# 2. App Engine: Arquivo app.yaml (ver app.yaml)
+# 3. Secret Manager: Recomendado para GEMINI_API_KEY em produção
+#
+# O código suporta variáveis de ambiente do sistema, então você NÃO precisa
+# do arquivo .env no Google Cloud - configure diretamente no console/CLI.
+# ==============================================================================
+
 # Chave da API do Google Gemini
 # Obtenha em: https://makersuite.google.com/app/apikey
+# 
+# Para Google Cloud:
+# - Cloud Run: Configure via Console ou use Secret Manager
+# - App Engine: Configure no app.yaml ou use Secret Manager
+# - Secret Manager (recomendado):
+#   gcloud secrets create gemini-api-key --data-file=-
+#
 GEMINI_API_KEY=coloque_sua_chave_aqui
 
-# Porta do servidor (opcional, padrão: 3000)
+# Porta do servidor
+# Local: Padrão 3000
+# Google Cloud: 
+#   - Cloud Run: Usa PORT automaticamente (geralmente 8080)
+#   - App Engine: Usa $PORT automaticamente
+# Para desenvolvimento local, use 3000
 PORT=3000
+
+# ==============================================================================
+# INSTRUÇÕES PARA GOOGLE CLOUD
+# ==============================================================================
+# 1. CLOUD RUN (Recomendado):
+#    gcloud run services update seu-servico \
+#      --set-env-vars GEMINI_API_KEY=sua_chave_aqui
+#    
+#    Ou use Secret Manager:
+#    gcloud run services update seu-servico \
+#      --update-secrets GEMINI_API_KEY=gemini-api-key:latest
+#
+# 2. APP ENGINE:
+#    Edite app.yaml e configure env_variables ou secret_env_variables
+#
+# 3. Para desenvolvimento local:
+#    cp env.example .env
+#    Edite .env e adicione sua chave GEMINI_API_KEY
+# ==============================================================================
 
