--- a/env.yaml.example
+++ b/env.yaml.example
@@ -8,3 +8,11 @@
 GEMINI_API_KEY: "sua_chave_aqui"
 PORT: "8080"
 
+# Configuração do Firestore (opcional - se não configurar, usa arquivo local)
+# FIRESTORE_PROJECT_ID: ID do seu projeto no Google Cloud
+# FIRESTORE_COLLECTION: Nome da coleção no Firestore (padrão: "nps_responses")
+# 
+# Para usar Firestore, configure:
+FIRESTORE_PROJECT_ID: "politicianinsight-6daf6"
+FIRESTORE_COLLECTION: "nps_responses"  # opcional, padrão é "nps_responses"
+
