--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,10 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+    volumes:
+      - ./env.yaml:/root/env.yaml:ro
     environment:
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
       - PORT=3000
-    env_file:
-      - .env
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/api/health"]
       interval: 30s
