--- a/env.example
+++ b/env.example
@@ -32,6 +32,18 @@ GEMINI_API_KEY=coloque_sua_chave_aqui
 # Para desenvolvimento local, use 3000
 PORT=3000
 
+# Configuração do Firestore (opcional - se não configurar, usa arquivo local)
+# FIRESTORE_PROJECT_ID: ID do seu projeto no Google Cloud
+# FIRESTORE_COLLECTION: Nome da coleção no Firestore (padrão: "nps_responses")
+# 
+# Para usar Firestore, configure:
+# FIRESTORE_PROJECT_ID=seu-projeto-id
+# FIRESTORE_COLLECTION=nps_responses  # opcional, padrão é "nps_responses"
+#
+# Exemplo:
+# FIRESTORE_PROJECT_ID=politicianinsight-6daf6
+# FIRESTORE_COLLECTION=nps_responses
+
 # ==============================================================================
 # INSTRUÇÕES PARA GOOGLE CLOUD
 # ==============================================================================
